NEW: PipeEndpoint, JSON RPC over named pipes